<resources>
    <string name="app_name">Udemy_3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desarrollador">Desarrollado por tu padre</string>

    <!-- MENU ADMIN -->

    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Listar de Administradores</string>
    <string name="Salir">Cerrar Sesión</string>

    <!-- MENU CLIENTE -->

    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpciones">Mas Opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>

    <!-- REGISTRO DE ADMINISTRADORES -->
    <string name="RegistrTxt">Registro de Administradores</string>
    <string name="Correo">Correo Electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres Completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Registar">Registrar</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>