<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/opcionestxt"
        android:title="@string/Opcionestxt">

        <menu>

            <item
                android:id="@+id/InicioCliente"
                android:title="@string/InicioCliente"
                android:icon="@drawable/uno_icon"/>
        </menu>
    </item>

    <item
        android:id="@+id/MasOcionesTxt"
        android:title="@string/MasOpciones">

        <menu>

            <item
                android:id="@+id/AcercaDe"
                android:title="@string/AcercaDe"
                android:icon="@drawable/acercade_icon"/>
            <item
                android:id="@+id/Compartir"
                android:title="@string/Compartir"
                android:icon="@drawable/compartir_icon"/>

        </menu>

    </item>

</menu>