<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentosAdmin.RegistrarAdmin">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- TITULO DE LA PANTALLA  -->
        <TextView
            android:text="@string/RegistrTxt"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- LINEAR CON FECHA DE REGISTRO E ICONO DE CALENDARIO  -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- FECHA DE REGISTRO TXT  -->
            <TextView
                android:id="@+id/FechaRegistro"
                android:text="@string/FechaRegistro"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- IMAGEN CALENDARIO   -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/calendario_icon"/>


        </androidx.appcompat.widget.LinearLayoutCompat>



        <!-- IMAGEN ADMINISTRADOR  -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/admin"
            android:layout_marginTop="20dp"/>

        <!-- CORREO ELECTRONICO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--  NOMBRE COMPLETO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombre"
                android:hint="@string/Nombres"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--  APELLIDO COMPLETO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellidos"
                android:hint="@string/Apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EDAD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Edad"
                android:hint="@string/Edad"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Registrar"
            android:text="@string/Registar"
            android:background="#0489B1"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>







    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>